--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@line/liff": "2.21.0",
+    "next": "^12.2.5",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "4.7.4"
+
   },
   "devDependencies": {
     "@types/node": "18.7.6",
